--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <input id="query_input">
+    <input id="query_input" value=".js-chirp-container.chirp-container">
     <button id="rq_button">Req</button>
   </body>
 </html>
