--- a/options.html
+++ b/options.html
@@ -22,6 +22,7 @@
 
       <div class="section">
 	<h5>Properties</h5>
+	<div id="props"></div>
       </div>
       
       <div class="divider"></div>
@@ -70,5 +71,6 @@
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="options.js"></script>
   </body>
 </html>
