--- a/options.html
+++ b/options.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="light-blue darken-1">
       <div class="nav-wrapper">
 	<a href="" class="brand-logo">Page Observer</a>
 	<ul class="right hide-on-med-and-down">
@@ -43,7 +43,7 @@
       </div>
     </div>
     
-    <footer class="page-footer">
+    <footer class="page-footer light-blue darken-1">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
